crates/swc_ecma_parser/tests/test262-error-references/fail/a7c82de4904833cc.js.stderr
error: Unexpected token `:`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/test262-parser/fail/a7c82de4904833cc.js:1:10
  |
1 | (class {3:0})
  |          ^

